--- a/index.html
+++ b/index.html
@@ -15,22 +15,23 @@
 
             <div class="row">
                 <div class="col">
-                    <img id="illustration" heigh="600" />
+                    <img id="illustration" heigh="400" />
                 </div>
                 <div class="col">
                     <button class="btn btn-warning" id="hint">Nouvel indice</button>
 
                     <ul class="list-group">
                     </ul>
+
+                    <button class="btn btn-success" id="btnSolution">Afficher la solution</button>
+
+
+                    <div id="solutionWrapper">
+                        <p id="solutionName" class="lead"></p>
+                        <p id="solutionDesc" class="fst-italic"></p>
+                    </div>
                 </div>
             </div>
-
-            <div id="solutionWrapper">
-                <p id="solution" class="lead"></p>
-                <p id="solutionDesc"></p>
-            </div>
-
-            <button class="btn btn-success" id="btnSolution">Afficher la solution</button>
         </div>
 
         <script src="main.js"></script>
